tests/macros/raw_select/validate.rs
fn main() {
    let q = discourse::questions![RawSelect { validate: todo!() }];
}
